--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rede social</title>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
    <header>
         <h1>Relatorio das redes sociais</h1>
         <nav>
             <a href="index.html">mundo</a>
-            <a href="#">minha escola</a>
+            <a href=">minha escola</a>
         </nav>
     <header>
         <main class="graficos-section">
