--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
    <header>
         <h1>Relatorio das redes sociais</h1>
         <nav>
-            <a href="index.html">mundo</a>
-            <a href=">minha escola</a>
+            <a href="index.html">Mundo</a>
+            <a href="#">Minha escola</a>
         </nav>
     <header>
         <main class="graficos-section">
@@ -21,7 +21,7 @@
 
         </main>
         <footer>
-          <p>Desenvolvido po tamires</p>
+          <p>Desenvolvido por Tamires</p>
     </footer>
 </body>
 </html>
