--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <section id="graficos-cotainer" class="graficos-cotainer">
                  <!-- crie os graficos aqui -->
             </section>
-
         </main>
         <footer>
           <p>Desenvolvido por Tamires</p>
     </footer>
+    <script type="mudule" src="informacoesGlobais.js"></script>
 </body>
 </html>
